Align career rewards and curriculum docs
